@@ -192,7 +192,7 @@ public class VariosEjemplos {
 	}
 
 	public static void main(String[] args) {
-		Locale.setDefault(new Locale("en", "US"));
+		Locale.setDefault(Locale.of("en", "US"));
 		test7();
 	}
 
